--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -2,3 +2,9 @@
 //
 // The variables you want to modify
 // $font-size-root: 20px;
+
+// $body-font-family: 'Poppins', 'sans-serif';
+// $heading-font-family: 'Poppins', 'sans-serif';
+// $font-size-root: 18px;
+// $messages-font-size: 14px;
+// @import '~vuetify/src/styles/styles.sass';
